--- a/examples/adri_espwebserver/data/index.htm
+++ b/examples/adri_espwebserver/data/index.htm
@@ -11,20 +11,20 @@
 			background-color: #4CAF50;
 			border: none;
 			color: white;
-			padding: 15px 32px;
+			padding: 5px 10px;
 			text-align: center;
 			text-decoration: none;
 			display: inline-block;
 			font-size: 16px;
-			margin: 4px 2px;
+			margin: 1px 1px;
 			cursor: pointer;
 		}
 	</style>
 
 	<h2>Adri_ESPwebserver</h2>
 
-	<p id="p1">Hello World!</p>
-	<button class="button"  onclick="request_http()" >Button</button>
+	<p id="p1"></p>
+	<button class="button"  onclick="request_send_socket('op','arg', 'v')" >Button</button>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="js/core.js"></script>
