--- a/examples/adri_espwebserver/data/index.htm
+++ b/examples/adri_espwebserver/data/index.htm
@@ -1,39 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-        <title id='page_name'>Adri_ESPwebserver</title>
-
-    </head>
-	<style>
-		.button {
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 5px 10px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			margin: 1px 1px;
-			cursor: pointer;
-		}
-	</style>
-
-	<h2>Adri_ESPwebserver</h2>
-
-	<p id="p1"></p>
-	<button class="button"  onclick="request_send_socket('op','arg', 'v')" >Button</button>
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="js/core.js"></script>
-
-    </body>
-
-
-</html>
-
-
-
-
+  <head>
+  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+  		<label>Body</label>
+  </body>
+</html> 
